--- a/GeTa.tex
+++ b/GeTa.tex
@@ -2,8 +2,8 @@
 % Dokumentinformationen %
 %%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\titleinfo}{Vorlage}
-\newcommand{\authorname}{\href{mailto:lmazzole@hsr.ch}{L. Mazzoleni}}
-\newcommand{\authoremail}{\href{mailto:lmazzole@hsr.ch}{lmazzole@hsr.ch} }
+\newcommand{\authorname}{\href{mailto:noelle.egger@hsr.ch}{N. Egger}}
+\newcommand{\authoremail}{\href{mailto:noelle.egger@hsr.ch}{noelle.egger@hsr.ch} }
 \newcommand{\versioninfo}{$ V1.1 $}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -26,5 +26,15 @@
 \tableofcontents
 \thispagestyle{empty}
 \newpage
-\input{sections/V1}
+\input{sections/Risse}
+\clearpage
+
+%\input{sections/RisseLayout}
+\clearpage
+
+\input{sections/Schwingungen}
+%\clearpage
+\input{sections/Dichtheit}
+%\clearpage
+\input{sections/Verformungen}
 \end{document}
