Fehlende Vorlesungen ergänzt, Grafiken vergrössert

--- a/GeTa.tex
+++ b/GeTa.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%
 % Dokumentinformationen %
 %%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\titleinfo}{Vorlage}
+\newcommand{\titleinfo}{Gebrauchstauglichkeit}
 \newcommand{\authorname}{\href{mailto:noelle.egger@hsr.ch}{N. Egger}}
 \newcommand{\authoremail}{\href{mailto:noelle.egger@hsr.ch}{noelle.egger@hsr.ch} }
 \newcommand{\versioninfo}{$ V1.1 $}
@@ -35,6 +35,6 @@
 \input{sections/Schwingungen}
 %\clearpage
 \input{sections/Dichtheit}
-%\clearpage
+\clearpage
 \input{sections/Verformungen}
 \end{document}
