--- a/sections/Dichtheit.tex
+++ b/sections/Dichtheit.tex
@@ -1,11 +1,24 @@
-\section{Dichtheit}
 
-	\begin{minipage}{\linewidth}
+	\begin{multicols}{2}
 		
-			\includegraphics[width=0.5\linewidth]{images/Dichtheit1HochbauAbdichtung.PNG}
-			\includegraphics[width=0.5\linewidth]{images/Dichtheit2TunnelAbdichtung.PNG}
-	
+		\section{Dichtheit}
+		
 
-	\end{minipage}
+			
+			\includegraphics[width=\linewidth]{images/Dichtheit1HochbauAbdichtung.PNG}
+			\includegraphics[width=\linewidth]{images/Dichtheit2TunnelAbdichtung.PNG}
 
-\textcolor{red}{SIA 270ff \& Vorlesung 10 Folie 8}
+
+			
+			\includegraphics[width=\linewidth]{images/Dichtheit3Klassen.PNG}	
+			\includegraphics[width=\linewidth]{images/Dichtheit3Abdichtungskonzept.PNG}
+			
+			
+			\subsection{Weisse Wanne}
+				
+				\includegraphics[width=\linewidth]{images/Dichtheit4WeisseWanne1.PNG}
+				\includegraphics[width=\linewidth]{images/Dichtheit4WeisseWanne2.PNG}
+				\includegraphics[width=\linewidth]{images/Dichtheit4WeisseWanne3.PNG}
+				\includegraphics[width=\linewidth]{images/Dichtheit4WeisseWanne4.PNG}
+				
+	\end{multicols}
