--- a/sections/Risse.tex
+++ b/sections/Risse.tex
@@ -301,7 +301,7 @@
 		\end{tabular}
 		
 		
-		\includegraphics[width=0.5\linewidth]{images/Risse4Plattenbalken.PNG}
+		\includegraphics[width=0.7\linewidth]{images/Risse4Plattenbalken.PNG}
 		
 		
 	\end{multicols}
@@ -405,7 +405,7 @@
 	\subsection{Biegung mit Normalkraft}
 	
 	
-	\includegraphics[width=0.5\linewidth]{images/Risse6Kern.PNG}
+	\includegraphics[width=\linewidth]{images/Risse6Kern.PNG}
 	
 	
 	Kernweiten:	 $ k_{1/2} = \frac{I_i}{A_i \cdot y_{2/1}} = \frac{W_y}{A} = \frac{  \frac{b \cdot h^2}{6}  }{b \cdot h} $  [m] \\	
@@ -416,8 +416,8 @@
 	\subsubsection{Druck, kleine Exzentrizität}
 	
 	
-	\includegraphics[width=0.5\linewidth]{images/Risse5klExPNG} \\
-	\includegraphics[width=0.5\linewidth]{images/Risse6Kern.PNG}
+	\includegraphics[width=0.7\linewidth]{images/Risse5klExPNG} \\
+	\includegraphics[width=\linewidth]{images/Risse6Kern.PNG}
 	
 	
 	Greift N im Kern an, kann die Ausmitte vernachlässigt werden $ \rightarrow $ zentrischer Druck
@@ -439,7 +439,7 @@
 
 	
 		
-	\includegraphics[width=0.4\linewidth]{images/Risse8ZugklEx.PNG}
+	\includegraphics[width=0.5\linewidth]{images/Risse8ZugklEx.PNG}
 	
 	
 	falls N innerhalb Bewehrungslagen $ \rightarrow $ Steifigkeit allein durch Stahl bestimmt
@@ -462,7 +462,7 @@
 	\subsubsection{Druck und Zug, grosse Exzentrizität}
 	
 	
-	\includegraphics[width=0.6\linewidth]{images/Risse7grEx.PNG}
+	\includegraphics[width=\linewidth]{images/Risse7grEx.PNG}
 	
 	Greift N nicht im Kern an, kann die Ausmitte nicht vernachlässigt werden $ \rightarrow $ e>k
 	
