--- a/sections/Schwingungen.tex
+++ b/sections/Schwingungen.tex
@@ -8,7 +8,7 @@
 		
 %			\includegraphics[width=\linewidth]{images/Schwingung1Schwingungsform.PNG}
 			
-		\begin{tabular}{l|l|p{0.25\linewidth}p{0.3\linewidth}}
+		\begin{tabular}{l|l|p{0.25\linewidth}p{0.5\linewidth}}
 			
 			\multicolumn{4}{c}{\textbf{Balken mit konstanter Biegesteifigkeit}} \\ \hline
 		
@@ -44,5 +44,9 @@
 			\item Biegesteifigkeit geht als Wurzel ein $ \rightarrow $ höhere Biegesteifigkeit EI = nur kleine Erhöhung der Eigenfrequenz
 			
 		\end{itemize}
+		
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		 \hspace{1cm} SIA 260, Anhang A Tab. 5 \& C Tab. 10 \\
 		
 	\end{minipage}
